--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,8 @@ permissions:
 hooks:
   BeforeInstall:
     - location: scripts/delete-before-artifacts.sh
+  Install:
+    - location: scripts/install-packages.sh
   AfterInstall:
     - location: scripts/change-script-permissions.sh
   ApplicationStart:
