--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-export DATASOURCE_URL=eatsroaddatabase.cverolzjl4v8.ap-northeast-2.rds.amazonaws.com
-export DATASOURCE_USERNAME=eatsroad
-export DATASOURCE_PASSWORD=whtjdgus04!
+DATASOURCE_URL=eatsroaddatabase.cverolzjl4v8.ap-northeast-2.rds.amazonaws.com
+DATASOURCE_USERNAME=eatsroad
+DATASOURCE_PASSWORD=whtjdgus04!
