--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/mapped-types": "^0.4.1",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/jsonwebtoken": "^8.5.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
