--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.1",
+    "btoa-atob": "^0.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "jsonwebtoken": "^8.5.1",
