--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "btoa-atob": "^0.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7",
