--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.1",
+    "aws-sdk": "^2.979.0",
     "btoa-atob": "^0.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
