--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.7",
     "aws-sdk": "^2.979.0",
     "btoa-atob": "^0.1.2",
     "class-transformer": "^0.4.0",
