--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ AWS_S3_BUCKET_NAME=eatsroad-img
 AWS_ACCESS_KEY_ID=AKIAUSCS57BA3S5QVGF2
 AWS_SECRET_ACCESS_KEY=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
 AWS_S3_REGION=ap-northeast-2
-FILE_LOCATION=https://eatsroad-img.s3.amazonaws.com/
+FILE_LOCATION=https://eatsroad-img.s3.amazonaws.com
