--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
+    "multer-s3-transform": "^2.10.3",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7",
+    "sharp": "^0.29.0",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34"
