--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
     "multer-s3-transform": "^2.10.3",
     "mysql": "^2.18.1",
